--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_giroscope">title_activity_giroscope</string>
+    <string name="tilte_app">Автоматизированная система определения местоположения мобильного объекта</string>
 </resources>
